[package]
name = "loyalty-api"
version = "0.1.0"
authors = ["Yannick Heinrich <yannick.heinrich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.3"

rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "uuid"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
diesel = { version = "1", features = ["sqlite"] }
serde = {version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
validator = { version = "0.12", features = ["derive"] }
thiserror = "1.0.23"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]